--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@ body
 {
     color: transparent;
     font-size: 11px;
-    background-color: #ffe8ee;
+    background-color: #eff0ed;
     border-radius: 10px;
     transition: 0.3s ease all;
 }
 
 #track-time.active #current-time, #track-time.active #track-length
 {
-    color: #f86d92;
+    color: #f2f2f0;
     background-color: transparent;
 }
 
@@ -137,7 +137,7 @@ body
 
 #s-area
 {
-    background-color:#ffe8ee;
+    background-color:#696359;
     cursor: pointer;
 }
 
